--- a/user-ms/src/main/resources/application-dev.yml
+++ b/user-ms/src/main/resources/application-dev.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/userdb
-    username: usuario-service
+    username: user-service
     password: a57npk1YqWG3
 
   jpa:
