--- a/user-ms/src/main/resources/application.yml
+++ b/user-ms/src/main/resources/application.yml
@@ -15,3 +15,11 @@ server:
       charset: UTF-8
       enabled: true
       force: true
+    context-path: /user-service
+
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
