--- a/account-ms/src/main/resources/application.yml
+++ b/account-ms/src/main/resources/application.yml
@@ -18,8 +18,10 @@ server:
     context-path: /account-service
 
 eureka:
+  instance:
+    hostname: localhost
   client:
     register-with-eureka: true
     fetch-registry: true
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://localhost:8761/eureka/
