--- a/transactional-account-ms/src/main/resources/application.yml
+++ b/transactional-account-ms/src/main/resources/application.yml
@@ -1,6 +1,27 @@
 spring:
   application:
     name: transaction-account-ms
+  jpa:
+    open-in-view: false
+  messages:
+    encoding: UTF-8
 
 server:
   port: 8003
+  tomcat:
+    uri-encoding: UTF-8
+  servlet:
+    encoding:
+      charset: UTF-8
+      enabled: true
+      force: true
+    context-path: /transactional-account-service
+
+eureka:
+  instance:
+    hostname: localhost
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
